tmp/funnel-output_path-XSicDxnh.tmp/gyak09/tests/unit/pods/errors/list/route-test.jshint.js
/home/ubuntu/workspace/gyak09/tmp/jshinter-output_path-KGfvdMYr.tmp/unit/pods/errors/list/route-test.jshint.js